# common-english-phonemes

./: .gitignore  Makefile  README.md  phonemes.py  pyproject.toml
