[project]
name = "phonemes"
version = "1.0.0"
description = "fetch and intersect the phonemes present in english dialects"
authors = [
    {name = "Gregory Danielson", email = "gregory.danielson3@gmail.com"},
]
dependencies = [
    "lxml~=4.6",
    "requests~=2.26",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "GPL-3.0-or-later"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
